# model_bridge

./: README.md  pyproject.toml
data/: bridge_catalog.json  compatibility_patches.json  environment_consolidation.json  next_integration_candidates.json  older_compatibility_targets.json  worker_registry.json
docs/: abot_world_bridge.md  architecture.md  audio_generation_bridge.md  causal_lm_bridge.md  classic_transformers_bridge.md  compatibility_catalog.md  cosmos25_transfer_offload_plan.md  env_removal_proofs.md  environment_consolidation.md  integration_contract.md  model_porting_workflow.md  nemo_asr_archive_expansion.md  next_integration_candidates.md  older_model_compatibility_targets.md  onnx_audio_face_bridge.md  runtime_policy.md  three_d_generation_bridge.md  worker_registry.md
legacy_model_bridge/: __init__.py  cli.py  consolidation.py  integration_skeleton.py  next_candidates.py  patches.py  registry.py
reports/: legacy-upgrade-candidates.json
scripts/: convert_cosmos25_pt_to_safetensors.py  cosmos25_official_worker.py  cosmos25_transfer_student_only_infer.py  derive_bridge_candidates.py  derive_legacy_upgrade_candidates.py  hunyuan_avatar_bf16_fsdp_worker.py  hunyuan_avatar_optimized_fp8_fsdp2_worker.py  hunyuan_avatar_worker.py  inspect_audio_generation.py  inspect_audiogen.py  inspect_bigvgan.py  inspect_classic_transformers.py  inspect_cosmos25_checkpoint.py  inspect_dam.py  inspect_hunyuan_avatar_llava_alignment.py  inspect_hunyuan_flash_attn.py  inspect_nemo_asr_archives.py  inspect_onnx_audio_face.py  inspect_trellis_native_stack.py  (+11 more)
(+215 files in other folders)
