[project]
name = "legacy-model-bridge"
version = "0.1.0"
description = "Compatibility runtime metadata for running legacy model artifacts on current ML dependencies."
requires-python = ">=3.11,<3.13"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
legacy-model-bridge = "legacy_model_bridge.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
